--- a/css/main.css
+++ b/css/main.css
@@ -1,110 +1,60 @@
 body {
-	background: url("../img-porta/humo2.jpg");
+	background: url("../img-porta/pluma.jpg");
 	background-repeat: no-repeat;
-	background-size: cover;
+	background-size: 100%;
+  width: 100%;
+  height: 0;
 }
 
-.letra {
-  font-family: 'Fredericka the Great', cursive;
-  color: #4e297e;
-}
-
-.subti {
-  font-family: 'Righteous', cursive;
-  font-size: 1em;
-  color: gray;
+.cuadro-blanco {
+  height: 500px;
+  width: 850px;
+  border: solid #fff 40px;
+  background-color: transparent;
+  position: absolute;
+  margin-left: 200px;
+  margin-top: 50px;
 }
 
 .hola {
-	font-size: 12em;	
-	margin-top: 60px;
-
+  font-family: 'Comfortaa', cursive;
+  color: #fff;
+  font-size: 10em;
+  margin-top: 0px;
+  display: block;
+  text-align: center;
 }
 
+.subti {
+ font-family: 'Comfortaa', cursive;
+  font-size: 2em;
+  color: #e3e3e3;
+  text-align: center;
+}
+
+.subti2 {
+  position: relative;
+  top: -180px;
+}
 
 span {
-  font-size: 1em;
   font-family: 'Pacifico', cursive;
   color: #ff00ce;
+  font-size: 1.5em;
 }
 
-.flecha {
-  width: 300px;
-  height: 250px;
-  position: absolute;
-  left: 970px;
+.mar-top0 {
+  margin-top: -200px;
 }
 
-p {
-  color: hsla(10%, 20%, 30%, .9);
-  letter-spacing: 5px;
-  margin: -80px 0 0 0;
-  position: absolute;
-  text-transform: uppercase;
-  top: 1%;
-  width: 100%;
-  animation: move linear 2000ms infinite;  
+a {
+  text-decoration: none;
 }
 
-@keyframes move {
-  0% {
-    text-shadow:
-      4px -4px 0 hsla(0, 100%, 50%, 1), 
-      3px -3px 0 hsla(0, 100%, 50%, 1), 
-      2px -2px 0 hsla(0, 100%, 50%, 1), 
-      1px -1px 0 hsla(0, 100%, 50%, 1),
-      -4px 4px 0 hsla(180, 100%, 50%, 1), 
-      -3px 3px 0 hsla(180, 100%, 50%, 1), 
-      -2px 2px 0 hsla(180, 100%, 50%, 1), 
-      -1px 1px 0 hsla(180, 100%, 50%, 1)
-    ;
-  }
-  25% {    
-    text-shadow:      
-      -4px -4px 0 hsla(180, 100%, 50%, 1), 
-      -3px -3px 0 hsla(180, 100%, 50%, 1), 
-      -2px -2px 0 hsla(180, 100%, 50%, 1), 
-      -1px -1px 0 hsla(180, 100%, 50%, 1),
-      4px 4px 0 hsla(0, 100%, 50%, 1), 
-      3px 3px 0 hsla(0, 100%, 50%, 1), 
-      2px 2px 0 hsla(0, 100%, 50%, 1), 
-      1px 1px 0 hsla(0, 100%, 50%, 1)      
-    ;
-  }
-  50% {
-    text-shadow:
-      -4px 4px 0 hsla(0, 100%, 50%, 1), 
-      -3px 3px 0 hsla(0, 100%, 50%, 1), 
-      -2px 2px 0 hsla(0, 100%, 50%, 1), 
-      -1px 1px 0 hsla(0, 100%, 50%, 1),
-      4px -4px 0 hsla(180, 100%, 50%, 1), 
-      3px -3px 0 hsla(180, 100%, 50%, 1), 
-      2px -2px 0 hsla(180, 100%, 50%, 1), 
-      1px -1px 0 hsla(180, 100%, 50%, 1)
-    ;
-  }
-  75% {
-    text-shadow:
-      4px 4px 0 hsla(180, 100%, 50%, 1), 
-      3px 3px 0 hsla(180, 100%, 50%, 1), 
-      2px 2px 0 hsla(180, 100%, 50%, 1), 
-      1px 1px 0 hsla(180, 100%, 50%, 1),
-      -4px -4px 0 hsla(0, 100%, 50%, 1), 
-      -3px -3px 0 hsla(0, 100%, 50%, 1), 
-      -2px -2px 0 hsla(0, 100%, 50%, 1), 
-      -1px -1px 0 hsla(0, 100%, 50%, 1)      
-    ;
-  }
-  100% {
-    text-shadow:
-      4px -4px 0 hsla(0, 100%, 50%, 1), 
-      3px -3px 0 hsla(0, 100%, 50%, 1), 
-      2px -2px 0 hsla(0, 100%, 50%, 1), 
-      1px -1px 0 hsla(0, 100%, 50%, 1),
-      -4px 4px 0 hsla(180, 100%, 50%, 1), 
-      -3px 3px 0 hsla(180, 100%, 50%, 1), 
-      -2px 2px 0 hsla(180, 100%, 50%, 1), 
-      -1px 1px 0 hsla(180, 100%, 50%, 1)
-    ;
-  }  
+div a p:hover {
+  text-decoration: none;
+  color: #8f00c1;
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.3);
 }
