--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,32 @@
-body {
+html {
+  box-sizing: inherit;
+}
+
+.body1 {
 	background: url("../img-porta/pluma.jpg");
 	background-repeat: no-repeat;
-	background-size: 100%;
+	background-size: cover;
   width: 100%;
   height: 0;
 }
 
+/* este es el efecto para que se mueva el fondo 
+#info {
+  margin: 0px auto 0px auto;
+  position: relative;
+      cursor: -webkit-grab;
+}
+*/
+
+  /* este es el marco que encierra al texto */
 .cuadro-blanco {
-  height: 500px;
+  height: 580px;
   width: 850px;
-  border: solid #fff 40px;
+  border: solid #fff 30px;
   background-color: transparent;
-  position: absolute;
-  margin-left: 200px;
   margin-top: 50px;
+  margin-left: 220px;
+  margin-bottom: 0px;
 }
 
 .hola {
@@ -23,38 +36,44 @@ body {
   margin-top: 0px;
   display: block;
   text-align: center;
-}
 
+}
+ /* son los subtitulos e gris y distancia */
 .subti {
- font-family: 'Comfortaa', cursive;
-  font-size: 2em;
+  font-family: 'Comfortaa', cursive;
   color: #e3e3e3;
   text-align: center;
 }
 
-.subti2 {
-  position: relative;
-  top: -180px;
+.top1 { /*este es el margen del primer renglon de texto "SOY" */
+  margin-top: -180px;
+  
+}
+ 
+.top2 {       /*este es el margen de los siguientes renglones, si los pongo
+  iagula al primero, se junta todo el texto */
+  margin-top: -80px;
+  padding-bottom: 0;
 }
 
+/* el span diferencia mi nombre y pRofesión en color rosa*/
 span {
   font-family: 'Pacifico', cursive;
-  color: #ff00ce;
-  font-size: 1.5em;
+  color: #00695c;
 }
 
-.mar-top0 {
-  margin-top: -200px;
+/* este es el tamaño de la fuente que tendra el contenido, menos el titulo HOLA*/
+.tit {
+  font-size: 3.6em;
 }
 
 a {
   text-decoration: none;
 }
 
-div a p:hover {
-  text-decoration: none;
-  color: #8f00c1;
-  -webkit-transform: scale(1.3);
-  -ms-transform: scale(1.3);
-  transform: scale(1.3);
+/* cambié el aspecto del botón que me llevará al portafolio */
+.btn_rosa {
+  margin-left: 1240px;
+  margin-top: -30px;
+  margin-bottom: 0px;
 }
