--- a/css/portafolio.css
+++ b/css/portafolio.css
@@ -24,9 +24,9 @@ lo quise arriba */
 
 /*cambie la posición de los botones internos */
 .btn-floating {
-	margin-bottom: 40px;
+	margin-bottom: 40px !important;
 	z-index: 1;
-	line-height: 50px;
+	line-height: 30px !important;
 }
 
 
@@ -85,195 +85,32 @@ lo quise arriba */
 }
  	/* aqui termina carrusel */
 
-	
-	/* este es efecto hover en el carrusel */
 
-.hovereffect {
-  width: 100%;
-  height: 100%;
-  float: left;
-  overflow: hidden;
-  position: relative;
-  text-align: center;
-  cursor: default;
-}
-
-.hovereffect .overlay {
-  position: absolute;
-  overflow: hidden;
-  width: 60%;
-  height: 60%;
-  left: 20%;
-  top: 20%;
-  border-bottom: 1px solid #FFF;
-  border-top: 1px solid #FFF;
-  	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-  transition: opacity 0.35s, transform 0.35s;
-  	-webkit-transform: scale(0,1);
-  	-ms-transform: scale(0,1);
-  transform: scale(0,1);
-}
-
-.hovereffect:hover .overlay {
-  opacity: 1;
-  filter: alpha(opacity=100);
-  	-webkit-transform: scale(1);
-  	-ms-transform: scale(1);
-  	transform: scale(1);
-}
-
-.hovereffect img {
-  display: block;
-  position: relative;
-  	-webkit-transition: all 0.35s;
-  transition: all 0.35s;
-}
-
-.hovereffect:hover img {
-  filter: brightness(0.6);
-  	-webkit-filter: brightness(0.6);
-}
-
-.hovereffect h2 {
-  text-transform: uppercase;
-  text-align: center;
-  position: relative;
-  background-color: transparent;
-  color: #FFF;
-  padding: 1em 0;
-  opacity: 0;
-  filter: alpha(opacity=0);
-  	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-  transition: opacity 0.35s, transform 0.35s;
-  	-webkit-transform: translate3d(0,-100%,0);
-  transform: translate3d(0,-100%,0);
-}
-
-.hovereffect a, .hovereffect p {
-  color: #FFF;
-  padding: 1em 0;
-  opacity: 0;
-  filter: alpha(opacity=0);
-  	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-  transition: opacity 0.35s, transform 0.35s;
-  	-webkit-transform: translate3d(0,100%,0);
-  transform: translate3d(0,100%,0);
-}
-
-.hovereffect:hover a, .hovereffect:hover p, .hovereffect:hover h2 {
-  opacity: 1;
-  filter: alpha(opacity=100);
-  	-webkit-transform: translate3d(0,0,0);
-  transform: translate3d(0,0,0);
-}
-
-.top {
-	margin-top: 100px;
-}
- 	/* hasta aquí termina el hover del  carrusel */
-
-/* este es el hover de las fotos de gustos */
-.hovereffect {
-  width: 100%;
-  height: 300px;
-  float: left;
-  overflow: hidden;
-  position: relative;
-  text-align: center;
-  cursor: default;
-}
-
-.hovereffect .overlay {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  overflow: hidden;
-  top: 	0;
-  left: 0;
-  background-color: rgba(75,75,75,0.7);
-  	-webkit-transition: all 0.4s  cubic-bezier(0.88,-0.99, 0, 1.81);
-  transition: all 0.4s  cubic-bezier(0.88,-0.99, 0, 1.81);
-}
-
-.hovereffect:hover .overlay {
-  background-color: rgba(48, 152, 157, 0.4);
-}
-
-.hovereffect img {
-  display: block;
-  position: relative;
-}
-
-.hovereffect h2 {
-  text-transform: uppercase;
-  color: #fff;
-  text-align: center;
-  position: relative;
-  font-size: 17px;
-  padding: 20px;
-  background: rgba(0, 0, 0, 0.6);
-  	-webkit-transform: translateY(45px);
-  	-ms-transform: translateY(45px);
-  transform: translateY(45px);
-  	-webkit-transition: all 0.4s  cubic-bezier(0.88,-0.99, 0, 1.81);
-  transition: all 0.4s  cubic-bezier(0.88,-0.99, 0, 1.81);
-}
-
-.hovereffect:hover h2 {
-  	-webkit-transform: translateY(5px);
-  	-ms-transform: translateY(5px);
-  transform: translateY(5px);
-}
-
-.p {
-	font-size: 20px;
-	color: #fff;
-	margin-top: 50px;
-}
- 	/* hasta aquí termina el hover de fotos */
-
-
-
-
+ /* tamaño del CV y hover, el otro efecto está en el css EFECTOS*/
 .cv {
 	width: 300px;
 	height: 400px;
 }
 
-.:hover
+.cv:hover
 {
 	-webkit-transform: scale(0.8);
 	-ms-transform: scale(0.8);
 	transform: scale(0.8);
-}
-
-						/*///* MARGENES Y MÁS //////*/
-
-#tit-proyecto {
-	margin-left: 350px;
-}
-
-#tit-algo {
-	margin-left: 470px;
-}
-
-
-			
-			/* NO REPEAT PARA IMAGENES */
-.no-repeat {				
-	background-repeat: no-repeat;
-}
-
-.te-center {
-	text-align: center;
+	opacity:0.5;
 }
 
 .mar-top100 {
 	margin-top: 100px;
 }
 
-.mar-top50 {
-	margin-top: 50px;
+.icon{
+	margin-left: 90px;
+	margin-bottom: 60px;
+}
+.icon2 {
+	margin-right: 40px;
+	margin-bottom: 60px;
 }
 
 
