--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,3 @@
-html {
-  box-sizing: inherit;
-}
 
 .body1 {
 	background: url("../img-porta/pluma.jpg");
@@ -8,6 +5,8 @@ html {
 	background-size: cover;
   width: 100%;
   height: 0;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 /* este es el efecto para que se mueva el fondo 
@@ -76,4 +75,50 @@ a {
   margin-left: 1240px;
   margin-top: -30px;
   margin-bottom: 0px;
+}
+
+
+/* MEDIA QUERIES*/
+
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    [class*="col l12"] {
+        width: 100%;
+    }
+
+    .body1 {
+      max-width: 100%;
+      height: 100%;
+    }
+
+    .cuadro-blanco {
+      width: 100%;
+      height: 100%;
+      border: solid #fff 20px;
+      margin-left:0px;
+    }
+    
+    .hola {
+      font-size: 6em;
+    }
+  
+    .top1 {
+      margin-top: -100px;
+    }
+    .top2 {
+      margin-top: -50px;
+    }
+    
+    .tit {
+      font-size: 2.5em;
+    }
+    
+    .btn-floating {
+      position: absolute !important;
+      margin-left: 180px !important;
+    
+    }
+
+
+
 }
