--- a/css/efectos.css
+++ b/css/efectos.css
@@ -99,7 +99,7 @@
     /* hasta aquí termina el hover del  carrusel */
 
 
-    /* este es el hover de las fotos */
+    /* este es el hover de las fotos 
 .dtl25 {
     width: 100%;
     height: 300px;
@@ -163,6 +163,31 @@
 }
 
     /* hasta aquí termina el hover de fotos */
+
+#foto {
+  background-image: url("../gustos/foto.jpg");
+  height: 340px;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 100%;
+}
+
+#foto:hover {
+  color: red;
+  background: red;
+  opacity: 0.1;
+}
+
+h2 {
+    font-family: 'Pacifico', cursive;
+    color: #1de9b6;
+    position: absolute;
+    top: 60px;
+    left: 70px;
+}
+
+
 
 
 
