--- a/css/portafolio.css
+++ b/css/portafolio.css
@@ -146,31 +146,37 @@ largo que quiero */
 	width: 90% !important;
 	position: relative;
 	left: 5% !important;
-	background-color: 
-	opacity: .8 !important;	
+	opacity: .9 !important;	
+	
 }
 
 /* este es el tamaño de los titulos del slide */
 h3 , h4 {
 	font-family: 'Pacifico', cursive;
 	color: #1de9b6;
-	z-index: 100;
+	background-color: rgba(111, 100, 114, 0.8);
+	height: 250px;
+	padding-top: 50px;
+	border-radius: 30px;
 }
 
-#morado {
-	color: rgb(111, 100, 114);
+h3 span {
+	font-size: 27px;
+	margin-right: 30px;
+	ont-family: 'Righteous', cursive;f
+	color: #fff;
+}
+
+h5 {
+	font-family: 'Pacifico', cursive;
+	color: #1de9b6;
 }
 
  /* esto es del modal */
-.modal-content {
-	height: 70% !important;
+.modal .modal-content .modal-footer {
+	height: 100% !important;
 }
-
-.modal-fixed-footer {
-	height: 60% !important;	
-	width: 33% !important;
-
-}
+	
 
 
 /* esta clase es de materialize para esconder la clase zoom del icono */
@@ -199,6 +205,21 @@ h3 , h4 {
 	background: rgb(111, 100, 114);
 	color: #fff;
 	opacity: .8;
+}
+
+.skill {
+		background-color: rgb(111, 100, 114) !important;
+		border-radius: 50px;
+		padding: 20px;
+		color: #fff;
+		font-size: 20px;
+	}
+
+
+.tooltip {
+	font-family: 'Righteous', cursive !important;
+	color: rgb(111, 100, 114);
+	display: inline-block;
 }
 
 
@@ -288,24 +309,25 @@ footer {
 	.h2 {
 		font-size: 2rem;
 	}
-
 	
+	
+
 	/* esta clase es de materialize y la use para el zoom de las fotos 
 	.small {
 		object-position: center;
-	} */	
+	} 	
 
 	.zoom{
 		margin-top: -15px;
 		margin-left: -35px;
 		position: fixed;
-		z-index: 2;
-	}
+		z-index: 20;
+	}   */
 
 	.foto-size {
 		height: 120px !important;
 		width: 90% !important;
-	}
+	} 
 
 	#cv {
 		max-width: 100%;
