cambio de gusto foto

--- a/css/efectos.css
+++ b/css/efectos.css
@@ -207,7 +207,7 @@
 }
 
 #conocer {
-  background-image: url("../gustos/conocer.JPG"); 
+  background-image: url("../gustos/lente.jpg"); 
   background-size: cover;
 }
 
